--- a/app/less/main.less
+++ b/app/less/main.less
@@ -18,12 +18,18 @@ body {
     background: grey;
 }
 
+.grid-container {
+    display: flex;
+    flex-direction: row;
+}
+
 .col {
     background: grey;
     float:left;
     width: 10%;
     height: 100%;
 }
+
 .block {
     width: 100%;
     height: 10%;
