--- a/app/less/main.less
+++ b/app/less/main.less
@@ -37,9 +37,8 @@ body {
     float: left;
     margin: 0;
     padding: 0;
-    transition: all;
+    transition: 1s;
 }
-
 .active {
     -webkit-box-shadow: inset 0 0 10px #000000;
 }
